[tool.poetry]
name = "tomgo"
version = "0.1.0"
description = "Test Django webspp."
authors = ["Tomodachi94 <tomodachi94+dev@pm.me>"]
repository = "https://github.com/Tomodachi94/Tomgo"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.5"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
